fix(hero): hidde overflow on x

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,8 +15,9 @@ html{
     font-family: "Outfit", sans-serif;
 }
 
-html {
+html, body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .animate-left {
